--- a/package.json
+++ b/package.json
@@ -9,13 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@octokit/rest": "^20.1.1",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-toast": "^1.1.5",
+    "@radix-ui/react-tooltip": "^1.0.7",
+    "@vercel/analytics": "^1.3.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "dub": "^0.29.8",
+    "lucide-react": "^0.379.0",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
+    "sonner": "^1.4.41",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7"
   },
