--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/tailwindcss": "^0.2.0",
     "@octokit/rest": "^20.1.1",
+    "@prisma/client": "^5.14.0",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.0.7",
@@ -22,6 +23,7 @@
     "dub": "^0.29.8",
     "lucide-react": "^0.379.0",
     "next": "14.2.3",
+    "prisma": "^5.14.0",
     "react": "^18",
     "react-dom": "^18",
     "sonner": "^1.4.41",
