--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@headlessui/tailwindcss": "^0.2.0",
     "@octokit/rest": "^20.1.1",
     "@prisma/client": "^5.14.0",
+    "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.0.7",
@@ -30,7 +31,8 @@
     "tailwind-merge": "^2.3.0",
     "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss-animate": "^1.0.7",
-    "tailwindcss-radix": "^3.0.3"
+    "tailwindcss-radix": "^3.0.3",
+    "vaul": "^0.9.1"
   },
   "devDependencies": {
     "@types/node": "20.12.12",
