--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@prisma/client": "^5.14.0",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@tailwindcss/forms": "^0.5.7",
@@ -22,7 +23,9 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "dub": "^0.29.8",
+    "linkify-react": "^4.1.3",
     "lucide-react": "^0.379.0",
+    "ms": "^2.1.3",
     "next": "14.2.3",
     "prisma": "^5.14.0",
     "react": "^18",
@@ -35,6 +38,7 @@
     "vaul": "^0.9.1"
   },
   "devDependencies": {
+    "@types/ms": "^0.7.34",
     "@types/node": "20.12.12",
     "@types/react": "18.3.3",
     "@types/react-dom": "^18",
