--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "dub": "^0.29.8",
+    "framer-motion": "^11.2.6",
     "linkify-react": "^4.1.3",
     "lucide-react": "^0.379.0",
     "ms": "^2.1.3",
@@ -31,6 +32,7 @@
     "prisma": "^5.14.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-markdown": "^9.0.1",
     "sonner": "^1.4.41",
     "tailwind-merge": "^2.3.0",
     "tailwind-scrollbar-hide": "^1.1.7",
