--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss-animate": "^1.0.7",
     "tailwindcss-radix": "^3.0.3",
+    "typesense": "^1.8.2",
     "vaul": "^0.9.1"
   },
   "devDependencies": {
