--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@sindresorhus/slugify": "^2.2.1",
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.13",
+    "@tremor/react": "^3.17.2",
     "@vercel/analytics": "^1.3.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
