--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@vercel/analytics": "^1.3.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cmdk": "^1.0.0",
     "dub": "^0.29.8",
     "framer-motion": "^11.2.6",
     "linkify-react": "^4.1.3",
@@ -33,6 +34,7 @@
     "prisma": "^5.14.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-highlight-words": "^0.20.0",
     "react-markdown": "^9.0.1",
     "sonner": "^1.4.41",
     "tailwind-merge": "^2.3.0",
@@ -40,6 +42,7 @@
     "tailwindcss-animate": "^1.0.7",
     "tailwindcss-radix": "^3.0.3",
     "typesense": "^1.8.2",
+    "use-debounce": "^10.0.1",
     "vaul": "^0.9.1"
   },
   "devDependencies": {
@@ -47,6 +50,7 @@
     "@types/node": "20.12.12",
     "@types/react": "18.3.3",
     "@types/react-dom": "^18",
+    "@types/react-highlight-words": "^0.20.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
