--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^5.1.3",
     "@headlessui/tailwindcss": "^0.2.0",
     "@octokit/rest": "^20.1.1",
     "@prisma/client": "^5.14.0",
