--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@clerk/nextjs": "^5.1.3",
     "@headlessui/tailwindcss": "^0.2.0",
+    "@hookform/resolvers": "^3.4.2",
     "@octokit/rest": "^20.1.1",
     "@prisma/client": "^5.14.0",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -39,6 +40,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-highlight-words": "^0.20.0",
+    "react-hook-form": "^7.51.5",
     "react-markdown": "^9.0.1",
     "sonner": "^1.4.41",
     "tailwind-merge": "^2.3.0",
