--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-highlight-words": "^0.20.0",
     "react-hook-form": "^7.51.5",
     "react-markdown": "^9.0.1",
+    "react-textarea-autosize": "^8.5.3",
     "sonner": "^1.4.41",
     "tailwind-merge": "^2.3.0",
     "tailwind-scrollbar-hide": "^1.1.7",
